@@ -1,5 +1,7 @@
 Release 2.4.1 - ???
 
+   * Add embedded depth to profiles tables in tika-eval (TIKA-3775).
+
    * Add stop() method to TikaServerCli so that it can be run
      with Apache Commons Daemon (TIKA-1570).
 
